trunk/Archive2/c4/92e2677015dfb1/output
main.cpp:13:15: error: 'is_same' is not a member of 'std'
 static_assert(std::is_same<X::previous_type, void>::value, "");
               ^
main.cpp:13:28: error: 'previous_type' is not a member of 'X'
 static_assert(std::is_same<X::previous_type, void>::value, "");
                            ^
main.cpp:13:46: error: expected string-literal before 'void'
 static_assert(std::is_same<X::previous_type, void>::value, "");
                                              ^
main.cpp:13:46: error: expected ')' before 'void'
main.cpp:14:15: error: 'is_same' is not a member of 'std'
 static_assert(std::is_same<Y::previous_type, X>::value, "");
               ^
main.cpp:14:28: error: 'previous_type' is not a member of 'Y'
 static_assert(std::is_same<Y::previous_type, X>::value, "");
                            ^
main.cpp:14:46: error: expected string-literal before 'X'
 static_assert(std::is_same<Y::previous_type, X>::value, "");
                                              ^
main.cpp:14:46: error: expected ')' before 'X'
main.cpp:15:15: error: 'is_same' is not a member of 'std'
 static_assert(std::is_same<Z::previous_type, Y>::value, "");
               ^
main.cpp:15:28: error: 'previous_type' is not a member of 'Z'
 static_assert(std::is_same<Z::previous_type, Y>::value, "");
                            ^
main.cpp:15:46: error: expected string-literal before 'Y'
 static_assert(std::is_same<Z::previous_type, Y>::value, "");
                                              ^
main.cpp:15:46: error: expected ')' before 'Y'
compilation failed
